--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: '3'
 
 services:
   postgres:
-    image: postgres
+    image: postgres:latest
     ports:
       - '54320:5432'
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_DB: your-database-name # THIS MUST MATCH YOUR DB NAME IN .env
+      POSTGRES_DB: payload_cms
       POSTGRES_HOST_AUTH_METHOD: trust
     env_file:
       - .env
