--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/mdx": "^4.2.2",
     "@astrojs/react": "^4.2.2",
+    "@directus/sdk": "^19.1.0",
     "@tailwindcss/vite": "^4.0.15",
     "@types/canvas-confetti": "^1.9.0",
     "@types/react": "^19.0.12",
