--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astro-community/astro-embed-link-preview": "^0.2.2",
     "@astrojs/mdx": "^4.2.4",
     "@astrojs/react": "^4.2.4",
     "@directus/sdk": "^19.1.0",
@@ -21,6 +22,7 @@
     "@types/react-dom": "^19.0.4",
     "astro": "^5.7.4",
     "astro-cloudinary": "^1.3.2",
+    "astro-embed": "^0.9.0",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.485.0",
