--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.485.0",
+    "marked": "^15.0.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.2",
     "tailwind-merge": "^3.0.2",
