--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "@types/marked": "^6.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.2",
     "tailwind-merge": "^3.0.2",
